Controller refactoring
