# controller/internal/adapters/broker/nats/nats.go
@@ -23,9 +23,24 @@ func NewNatsBroker(conn *nats.Conn) *NatsBroker {
 	}
 }
 
+// AnalysisNats is a NATS representation of Analysis
+type AnalysisNats struct {
+	Id              string `json:"id"`
+	Query           string `json:"query"`
+	Answer          string `json:"answer"`
+	IsUserSatisfied bool   `json:"is_user_satisfied"`
+}
+
+// AnalyzesFilterNats is a NATS representation of AnalysisFilter
+type AnalyzesFilterNats struct {
+	Query           string `json:"query"`
+	Answer          string `json:"answer"`
+	IsUserSatisfied *bool  `json:"is_user_satisfied"`
+}
+
 // PublishAnalysis publishes analysis to NATS
 func (n *NatsBroker) PublishAnalysis(ctx context.Context, analysis domain.Analysis) error {
-	analysisPayload, err := json.Marshal(analysis)
+	analysisPayload, err := json.Marshal(toAnalysisNats(analysis))
 	if err != nil {
 		return fmt.Errorf("failed to marshal analysis to json: %w", err)
 	}
@@ -40,21 +55,22 @@ func (n *NatsBroker) RequestAnalysisById(ctx context.Context, id string) (domain
 		return domain.Analysis{}, fmt.Errorf("failed to do request: %w", err)
 	}
 
-	var analysis domain.Analysis
+	var analysis AnalysisNats
+
 	if err := json.Unmarshal(analysisMsg.Data, &analysis); err != nil {
 		return domain.Analysis{}, fmt.Errorf("failed to unmarshal analysis from json: %w", err)
 	}
-	return analysis, nil
+	return toDomainAnalysis(analysis), nil
 }
 
 // RequestAnalyzes marshals AnalyzesFilter and sends request to NATS waiting for response with analyzes
-func (n *NatsBroker) RequestAnalyzes(ctx context.Context, AnalyzesFilter domain.AnalyzesFilter) ([]domain.Analysis, error) {
-	filterPayload, err := json.Marshal(AnalyzesFilter)
+func (n *NatsBroker) RequestAnalyzes(ctx context.Context, filter domain.AnalyzesFilter) ([]domain.Analysis, error) {
+	filterPayload, err := json.Marshal(toAnalyzesFilterNats(filter))
 	if err != nil {
 		return nil, fmt.Errorf("failed to marshal analyzes filter to json: %w", err)
 	}
 
-	analysisMsg, err := n.conn.RequestWithContext(ctx, analysisSubject, filterPayload)
+	analysisMsg, err := n.conn.RequestWithContext(ctx, analysisSubject+".filter", filterPayload)
 	if err != nil {
 		return nil, fmt.Errorf("failed to do request: %w", err)
 	}
